<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>

    <string name="track_button">Track sales or receive shipment</string>
    <string name="delete_button">Delete</string>
    <string name="order_button">Order more</string>
    <string name="add_button">Add new item</string>

    <string name="price">Price:$ \u0020</string>
    <string name="item">Item Name: \u0020</string>
    <string name="quantity">Quantity: \u0020</string>

    <string name="quick_sale">Quick sale</string>
</resources>
